1. Added the ability to hide the app to system tray (command argument /h). Now when the app starts automatically with Windows it will start hidden by default. 2. Added new title bar that incorporates a 'hide to system tray' button. 3. Updated the app icon!

--- a/App.xaml
+++ b/App.xaml
@@ -6,8 +6,16 @@
     <Application.Resources>
 
         <BitmapImage x:Key="CalibImg" UriSource="Resources/calib_img.png"/>
-     
-        
+
+        <Border x:Key="TrayToolTip" Background="GhostWhite" CornerRadius="4">
+            <Border.Effect>
+                <DropShadowEffect ShadowDepth="0" BlurRadius="5"/>
+            </Border.Effect>
+            <StackPanel Margin="10">
+                <TextBlock Text="Free Gamma"/>
+                <TextBlock Text="Double click to restore"/>
+            </StackPanel>
+        </Border>
         
         <Style x:Key="RepeatButtonTransparent" TargetType="{x:Type RepeatButton}">
             <Setter Property="OverridesDefaultStyle" Value="true"/>
