--- a/App.xaml
+++ b/App.xaml
@@ -11,8 +11,8 @@
             <Border.Effect>
                 <DropShadowEffect ShadowDepth="0" BlurRadius="5"/>
             </Border.Effect>
-            <StackPanel Margin="10">
-                <TextBlock Text="Free Gamma"/>
+            <StackPanel Margin="10" TextBlock.Foreground="Black">
+                <TextBlock Text="Free Gamma" Margin="0 0 0 2"/>
                 <TextBlock Text="Double click to restore"/>
             </StackPanel>
         </Border>
@@ -269,7 +269,155 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-       
+
+
+
+
+
+
+
+
+
+        <SolidColorBrush x:Key="Menu.Static.Background" Color="#FFFFFFFF"/>
+        <SolidColorBrush x:Key="Menu.Static.Foreground" Color="Black" />
+        <SolidColorBrush x:Key="Menu.Disabled.Foreground" Color="#FF707070"/>
+        <SolidColorBrush x:Key="MenuItem.Selected.Background" Color="#3D7FAAE9"/>
+        <SolidColorBrush x:Key="MenuItem.Selected.Border" Color="#5F7FAAE9"/>
+        <SolidColorBrush x:Key="MenuItem.Highlight.Background" Color="#3D7FAAE9"/>
+        <SolidColorBrush x:Key="MenuItem.Highlight.Border" Color="#5F7FAAE9"/>
+        <SolidColorBrush x:Key="MenuItem.Highlight.Disabled.Background" Color="#0A000000"/>
+        <SolidColorBrush x:Key="MenuItem.Highlight.Disabled.Border" Color="#21000000"/>
+        <DropShadowEffect x:Key="MenuShadow" ShadowDepth="0" Color="#45000000" Opacity="0.8" BlurRadius="7"/>
+
+
+        <Style TargetType="ContextMenu">
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Padding" Value="2"/>
+            <Setter Property="Foreground" Value="{StaticResource Menu.Static.Foreground}"/>
+            <Setter Property="Background" Value="{StaticResource Menu.Static.Background}"/>
+            <Setter Property="HorizontalOffset" Value="-6"/>
+            <Setter Property="VerticalOffset" Value="-6"/>
+            <Setter Property="Template" >
+                <Setter.Value>
+                    <ControlTemplate TargetType="ContextMenu" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                        <Border CornerRadius="3" Padding="{TemplateBinding Padding}" BorderThickness="{TemplateBinding Border.BorderThickness}" BorderBrush="{TemplateBinding Border.BorderBrush}" Background="{TemplateBinding Panel.Background}" Name="ContextMenuBorder">
+                            <ScrollViewer Style="{DynamicResource {ComponentResourceKey TypeInTargetAssembly=FrameworkElement, ResourceId=MenuScrollViewer}}" Name="ContextMenuScrollViewer" Margin="1,0,1,0" >
+                                <Grid RenderOptions.ClearTypeHint="Enabled">
+                                    <Canvas Width="0" Height="0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                                        <Rectangle Fill="{x:Null}" Name="OpaqueRect" Width="Auto" Height="Auto" />
+                                    </Canvas>
+                                    <Rectangle RadiusX="2" RadiusY="2" Width="28" Margin="1,2,1,2" HorizontalAlignment="Left" />
+                                    <ItemsPresenter Name="ItemsPresenter" Margin="{TemplateBinding Control.Padding}" SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" KeyboardNavigation.DirectionalNavigation="Cycle" />
+                                </Grid>
+                            </ScrollViewer>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="ContextMenuService.HasDropShadow" Value="True">
+                                <Setter Property="FrameworkElement.Margin" TargetName="ContextMenuBorder"  Value="7"/>
+                                <Setter Property="Effect" Value="{StaticResource MenuShadow}"/>
+                            </Trigger>
+                            <Trigger Property="ScrollViewer.CanContentScroll" SourceName="ContextMenuScrollViewer" Value="False">
+                                <Setter Property="Canvas.Top" TargetName="OpaqueRect" Value="{Binding ElementName=ContextMenuScrollViewer, Path=VerticalOffset}"/>
+                                <Setter Property="Canvas.Left" TargetName="OpaqueRect" Value="{Binding ElementName=ContextMenuScrollViewer, Path=HorizontalOffset}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+
+        <Style TargetType="MenuItem">
+
+            <Setter Property="Margin" Value="1"/>
+
+            <Setter Property="Template" >
+                <Setter.Value>
+                    <ControlTemplate TargetType="MenuItem" >
+                        <Border BorderThickness="{TemplateBinding Border.BorderThickness}" BorderBrush="{TemplateBinding Border.BorderBrush}" Background="{TemplateBinding Panel.Background}" Name="templateRoot" UseLayoutRounding="True" SnapsToDevicePixels="True">
+                            <Grid Margin="1,1,1,2" >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" MinWidth="0" SharedSizeGroup="MenuItemIconColumnGroup" />
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="30" />
+                                    <ColumnDefinition Width="Auto" SharedSizeGroup="MenuItemIGTColumnGroup" />
+                                    <ColumnDefinition Width="20" />
+                                </Grid.ColumnDefinitions>
+                                <ContentPresenter x:Name="Content" RecognizesAccessKey="True" Content="{TemplateBinding HeaderedContentControl.Header}" ContentTemplate="{TemplateBinding HeaderedContentControl.HeaderTemplate}" ContentStringFormat="{TemplateBinding HeaderedItemsControl.HeaderStringFormat}" ContentSource="Header" Margin="{TemplateBinding Control.Padding}" HorizontalAlignment="Left" VerticalAlignment="Center" SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" Grid.Column="2" />
+                                <Grid x:Name="IconAndGlyphPanel" Width="{Binding ElementName=Content, Path=ActualHeight}" Height="{Binding ElementName=Content, Path=ActualHeight}">
+                                    <ContentPresenter Name="Icon" Content="{TemplateBinding MenuItem.Icon}" ContentSource="Icon"   Margin="1" HorizontalAlignment="Center" VerticalAlignment="Center" SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
+                                    <Border Name="GlyphPanel"  Margin="2" BorderThickness="1" Visibility="Hidden">
+                                        <Viewbox Margin="1,2,1,1">
+                                            <Path Name="Glyph" Data="F1 M 10.0,1.2 L 4.7,9.1 L 4.5,9.1 L 0,5.2 L 1.3,3.5 L 4.3,6.1L 8.3,0 L 10.0,1.2 Z" Fill="{StaticResource Menu.Static.Foreground}"  FlowDirection="LeftToRight" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </Viewbox>
+                                    </Border>
+                                </Grid>
+                                <TextBlock x:Name="MinWidthChar" Text=" " Height="1" Margin="1,0,1,0" FontSize="{TemplateBinding FontSize }" Grid.Column="1"/>
+                                <TextBlock Text="{TemplateBinding MenuItem.InputGestureText}" Margin="{TemplateBinding Control.Padding}" VerticalAlignment="Center" Opacity="0.7" Grid.Column="4" />
+                                <Path x:Name="RightArrow" Data="M0,0L4,3.5 0,7z" Fill="{StaticResource Menu.Static.Foreground}" Margin="10,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="5" />
+                                <Popup x:Name="PART_Popup" IsOpen="{Binding IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}" Placement="Right" HorizontalOffset="-2" VerticalOffset="-3" PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimationKey}}" AllowsTransparency="True" Focusable="False">
+                                    <Border Name="SubMenuBorder"  Padding="3" Margin="7" CornerRadius="3" UseLayoutRounding="True" Background="{StaticResource Menu.Static.Background}" Effect="{StaticResource MenuShadow}">
+                                        <ScrollViewer Style="{DynamicResource {ComponentResourceKey TypeInTargetAssembly=FrameworkElement, ResourceId=MenuScrollViewer}}" Name="SubMenuScrollViewer">
+                                            <Grid RenderOptions.ClearTypeHint="Enabled">
+                                                <Canvas Width="0" Height="0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                                                    <Rectangle Fill="{x:Null}" Name="OpaqueRect" Width="0" Height="0" />
+                                                </Canvas>
+                                                <ItemsPresenter Name="ItemsPresenter" SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" KeyboardNavigation.TabNavigation="Cycle" KeyboardNavigation.DirectionalNavigation="Cycle" Grid.IsSharedSizeScope="True" />
+                                            </Grid>
+                                        </ScrollViewer>
+                                    </Border>
+                                </Popup>
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="HasItems" Value="False">
+                                <Setter TargetName="RightArrow" Property="Visibility" Value="Collapsed"/>
+                            </Trigger>
+                            <Trigger Property="MenuItem.IsSuspendingPopupAnimation" Value="True">
+                                <Setter Property="Popup.PopupAnimation" TargetName="PART_Popup" Value="None"/>
+                            </Trigger>
+                            <Trigger Property="MenuItem.Icon" Value="{x:Null}">
+                                <Setter Property="UIElement.Visibility" TargetName="Icon" Value="Collapsed"/>
+                            </Trigger>
+                            <MultiTrigger >
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="MenuItem.Icon" Value="{x:Null}"/>
+                                    <Condition Property="IsCheckable" Value="False"/>
+                                </MultiTrigger.Conditions>
+                                <Setter TargetName="IconAndGlyphPanel" Property="Width" Value="{Binding ElementName=MinWidthChar, Path=ActualWidth}"/>
+                            </MultiTrigger>
+                            <Trigger Property="MenuItem.IsChecked" Value="True">
+                                <Setter Property="UIElement.Visibility" TargetName="GlyphPanel" Value="Visible"/>
+                                <Setter Property="UIElement.Visibility" TargetName="Icon" Value="Collapsed"/>
+                            </Trigger>
+                            <Trigger Property="MenuItem.IsHighlighted" Value="True">
+                                <Setter Property="Panel.Background" TargetName="templateRoot" Value="{StaticResource MenuItem.Highlight.Background}"/>
+                                <Setter Property="Border.BorderBrush" TargetName="templateRoot" Value="{StaticResource MenuItem.Highlight.Background}"/>
+                            </Trigger>
+                            <Trigger Property="UIElement.IsEnabled" Value="False">
+                                <Setter Property="TextElement.Foreground" TargetName="templateRoot" Value="{StaticResource Menu.Disabled.Foreground}"/>
+                                <Setter Property="Shape.Fill" TargetName="Glyph" Value="{StaticResource Menu.Disabled.Foreground}"/>
+                                <Setter Property="Shape.Fill" TargetName="RightArrow" Value="{StaticResource Menu.Disabled.Foreground}"/>
+                            </Trigger>
+                            <Trigger Property="ScrollViewer.CanContentScroll" SourceName="SubMenuScrollViewer" Value="False">
+                                <Setter Property="Canvas.Top" TargetName="OpaqueRect" Value="{Binding Path=VerticalOffset, ElementName=SubMenuScrollViewer}"/>
+                                <Setter Property="Canvas.Left" TargetName="OpaqueRect" Value="{Binding Path=HorizontalOffset, ElementName=SubMenuScrollViewer}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+
+
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+
+
+
+
+
 
 
 
