--- a/form_Settings.xaml
+++ b/form_Settings.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Free_Gamma"
         mc:Ignorable="d"
-        Title="Settings" Height="350" Width="500" WindowStartupLocation="CenterScreen">
+        Title="Settings" Height="350" Width="500" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
 
     <DockPanel x:Name="pnl_1" Margin="30">
 
