--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Free_Gamma"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             ShutdownMode="OnMainWindowClose">
     <Application.Resources>
 
         <BitmapImage x:Key="CalibImg" UriSource="Resources/calib_img.png"/>
@@ -302,7 +303,7 @@
                     <ControlTemplate TargetType="ContextMenu" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
                         <Border CornerRadius="3" Padding="{TemplateBinding Padding}" BorderThickness="{TemplateBinding Border.BorderThickness}" BorderBrush="{TemplateBinding Border.BorderBrush}" Background="{TemplateBinding Panel.Background}" Name="ContextMenuBorder">
                             <ScrollViewer Style="{DynamicResource {ComponentResourceKey TypeInTargetAssembly=FrameworkElement, ResourceId=MenuScrollViewer}}" Name="ContextMenuScrollViewer" Margin="1,0,1,0" >
-                                <Grid RenderOptions.ClearTypeHint="Enabled">
+                                <Grid RenderOptions.ClearTypeHint="Auto">
                                     <Canvas Width="0" Height="0" HorizontalAlignment="Left" VerticalAlignment="Top">
                                         <Rectangle Fill="{x:Null}" Name="OpaqueRect" Width="Auto" Height="Auto" />
                                     </Canvas>
@@ -359,8 +360,8 @@
                                 <Path x:Name="RightArrow" Data="M0,0L4,3.5 0,7z" Fill="{StaticResource Menu.Static.Foreground}" Margin="10,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="5" />
                                 <Popup x:Name="PART_Popup" IsOpen="{Binding IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}" Placement="Right" HorizontalOffset="-2" VerticalOffset="-3" PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimationKey}}" AllowsTransparency="True" Focusable="False">
                                     <Border Name="SubMenuBorder"  Padding="3" Margin="7" CornerRadius="3" UseLayoutRounding="True" Background="{StaticResource Menu.Static.Background}" Effect="{StaticResource MenuShadow}">
-                                        <ScrollViewer Style="{DynamicResource {ComponentResourceKey TypeInTargetAssembly=FrameworkElement, ResourceId=MenuScrollViewer}}" Name="SubMenuScrollViewer">
-                                            <Grid RenderOptions.ClearTypeHint="Enabled">
+                                        <ScrollViewer Margin="1" Style="{DynamicResource {ComponentResourceKey TypeInTargetAssembly=FrameworkElement, ResourceId=MenuScrollViewer}}" Name="SubMenuScrollViewer">
+                                            <Grid RenderOptions.ClearTypeHint="Auto">
                                                 <Canvas Width="0" Height="0" HorizontalAlignment="Left" VerticalAlignment="Top">
                                                     <Rectangle Fill="{x:Null}" Name="OpaqueRect" Width="0" Height="0" />
                                                 </Canvas>
